# Meowchkin

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  RULES.MD
include/: abstract_observer.hpp  action.hpp  application.hpp  bd_observer.hpp  bd_scoreboard_scene.hpp  client.hpp  enum_array.hpp  game.hpp  game_session.hpp  game_state.hpp  game_view.hpp  gui_board.hpp  gui_card.hpp  gui_card_loader.hpp  gui_card_span.hpp  gui_card_span_dropdown_menu.hpp  gui_dice_roller.hpp  gui_player_statistics_menu.hpp  gui_text_chat.hpp  gui_usernames_box.hpp  gui_window_dependable.hpp  message_types.hpp  model_card.hpp  model_card_manager.hpp  model_command.hpp  model_object.hpp  model_player.hpp  model_random.hpp  noncopyable.hpp  paths_to_binaries.hpp  plugin.hpp  raylib_game_view.hpp  scene.hpp  sended_classes.hpp  server.hpp  shared_game_state.hpp  timed_state_machine.hpp  validator.hpp  virtual_machine.hpp
src/: BD_1_usage.cpp  client.cpp  game.cpp  game_state.cpp  main.cpp  model_card.cpp  model_card_manager.cpp  model_player.cpp  server.cpp  shared_game_state.cpp  virtual_machine.cpp
src/scenes/: bd_score_board.cpp  game_view.cpp  game_view_notifiers.inc.cpp  gui_board.cpp  gui_card_span.cpp  gui_dice_roller.cpp  gui_text_chat.cpp  gui_usernames_box.cpp  main_menu_scene.cpp  paths_to_binaries.hpp  raylib_game_view.cpp  scene.cpp
tests/: test_model.cpp
